# stmdspgui

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: 3_fir.cpp  4_fir_pro.cpp  7_iir_echo.cpp
source/: circular.hpp  code.cpp  config.h  device.cpp  device_formula.cpp  file.cpp  gui.cpp  gui_code.cpp  gui_device.cpp  gui_help.cpp  logview.cpp  logview.h  main.cpp  wav.hpp
source/imgui/: TextEditor.cpp  TextEditor.h  imgui.h
source/stmdsp/: stmdsp.cpp  stmdsp.hpp  stmdsp_code.hpp
templates/: 1_convolve_simple.cpp  2_convolve_overlap_save.cpp  5_fir_differentiator.cpp  6_iir_test.cpp
